<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hough_3d</name>
  <version>0.0.0</version>
  <description>implementation of hough transform for point clouds</description>
  <maintainer email="josh.campbell@swri.org">Josh Campbell</maintainer>
  <license>proprietary</license>
  <author>Josh Campbell</author>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libeigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
